--- a/themes/next/source/css/main.styl
+++ b/themes/next/source/css/main.styl
@@ -43,3 +43,57 @@ for $mixin in $mixins
 // Custom Layer
 // --------------------------------------------------
 @import "_custom/custom";
+body{
+	overflow-x: hidden;
+}
+.content-wrap, .header-inner, .sidebar{
+	background: rgba(255,255,255,0.7);
+	box-shadow: 4px 3px 10px rgba(0,0,0,.7);
+}
+.sidebar-inner {
+	background: transparent;
+}
+.sidebar-panel{
+	background: #fff;
+}
+.sidebar-panel, .post{
+	border-radius: 5px;
+	box-shadow: 2px 1px 6px rgba(0,0,0,.7);
+}
+
+
+.bgs li {
+	background-repeat : no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	display: none;
+	z-index: -10;
+	top: 0;
+	left: 0;
+}
+.bgs li.animation {
+	z-index: -5;
+	animation: bgChange 12s;
+}
+.post {
+	background: #fff;
+	padding:8px;
+	padding-bottom: 0;
+}
+
+@keyframes bgChange {
+	0% {
+		transform: scale(1);
+		opacity: 1;
+	}
+	85% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+		transform: scale(1.4);
+	}
+}
