--- a/themes/next/source/css/_common/components/sidebar/sidebar-nav.styl
+++ b/themes/next/source/css/_common/components/sidebar/sidebar-nav.styl
@@ -16,7 +16,7 @@
 
 .page-post-detail .sidebar-nav-toc { padding: 0 5px; }
 
-.page-post-detail .sidebar-nav-overview { margin-left: 10px; }
+.page-post-detail .sidebar-nav-overview { margin-left: 10px; background: #fff }
 
 .sidebar-nav .sidebar-nav-active {
   color: $sidebar-highlight;
