--- a/themes/next/source/css/_schemes/Pisces/_sidebar.styl
+++ b/themes/next/source/css/_schemes/Pisces/_sidebar.styl
@@ -1,4 +1,4 @@
-.use-motion .sidebar .motion-element { opacity: 1; }
+.use-motion .sidebar .motion-element { opacity: 1; background: #fff; border-radius: 3px; padding-bottom:4px }
 
 .sidebar {
   display: none;
